--- a/config/boards/shields/concave60/concave60.conf
+++ b/config/boards/shields/concave60/concave60.conf
@@ -7,7 +7,9 @@ CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
-
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_BLE=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 
